Added better support for php features by implementing ::class as strings and also added a filter event to the crud controller

--- a/Resources/views/Form/select2_widget.html.twig
+++ b/Resources/views/Form/select2_widget.html.twig
@@ -1,16 +1,16 @@
 {% block select2_widget %}
     {{ block('choice_widget') }}
-    
+
     {% if form.vars.include_source %}
-        <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" />
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
+        {%  include "@KMJToolkit/Form/select2_includes.html.twig" %}
     {% endif %}
-    
+
     <script type="text/javascript">
         jQuery(document).ready(function ($) {
             $("#{{ form.vars.id }}").select2({
                 tags: {{ form.vars.tags ? "true" : "false" }},
                 minimumInputLength: {{ form.vars.minimum_input }},
+                theme: '{{ form.vars.theme }}',
                 ajax: {
                     url: "{{ path(form.vars.route) }}",
                     delay: 250,
@@ -19,7 +19,16 @@
                     data: {% autoescape false %}{{ form.vars.handle_data }}{% endautoescape %},
                     processResults: {% autoescape false %}{{ form.vars.process_results }}{% endautoescape %},
                 },
+                {% if form.vars.tags %}
+                createTag: function (tag) {
+                    return {
+                        id: tag.term,
+                        text: tag.term + " (create new)",
+                        isTag: true,
+                    };
+                }
+                {% endif %}
             });
         });
     </script>
-{% endblock %}
+{% endblock select2_widget %}
